force-app/main/default/objects/TransactionJournal/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <description>Custom field to capture channel name as text.</description>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>