force-app/main/default/objects/TransactionJournal/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current running balance</description>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>