force-app/main/default/objects/TransactionJournal/fields/Is_Non_Merchanised_Item__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Merchanised_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether transaction journal is associated with Non-merchandised item or not. Non-merchandise SKUs that do not qualify for points.</description>
    <label>Is Non-Merchanised Item</label>
    <type>Checkbox</type>
</CustomField>