force-app/main/default/objects/TransactionJournal/fields/IsReturn__c.field-meta.xml
<CustomField>
    <fullName>IsReturn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to mark journal entry is for item returned</description>
    <label>IsReturn</label>
    <type>Checkbox</type>
</CustomField>