force-app/main/default/objects/TransactionJournal/fields/Member_Status_Points__c.field-meta.xml
<CustomField>
    <fullName>Member_Status_Points__c</fullName>
    <description>Formula field to retrieve member’s status points</description>
    <formula>Member.Status_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Status Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>