force-app/main/default/objects/TransactionJournal/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <description>Formula field to return Membership Number of the Loyaltly member.</description>
    <formula>Member.MembershipNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Number</label>
    <type>Text</type>
</CustomField>