force-app/main/default/objects/TransactionJournal/fields/Order_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_ID__c</fullName>
    <description>External Order Item Number to identify this transaction</description>
    <label>Order Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>