force-app/main/default/objects/TransactionJournal/fields/Original_Channel__c.field-meta.xml
<CustomField>
    <fullName>Original_Channel__c</fullName>
    <label>Original Channel</label>
    <length>18</length>
    <type>Text</type>
</CustomField>