force-app/main/default/objects/TransactionJournal/fields/Original_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_ID__c</fullName>
    <description>Original Order ID for returns process</description>
    <label>Original Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>