force-app/main/default/objects/TransactionJournal/fields/Original_Order_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Order_Item_ID__c</fullName>
    <description>Original Order Item ID for Returns process</description>
    <label>Original Order Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>