force-app/main/default/objects/TransactionJournal/fields/Product_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Name__c</fullName>
    <description>Product category name</description>
    <formula>ProductCategory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category Name</label>
    <type>Text</type>
</CustomField>