force-app/main/default/objects/TransactionJournal/fields/ReceiptNo__c.field-meta.xml
<CustomField>
    <fullName>ReceiptNo__c</fullName>
    <label>ReceiptNo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>