force-app/main/default/objects/TransactionJournal/fields/Transaction_Amount_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount_Rounded__c</fullName>
    <description>Formula field to round transaction amount either up/down to the nearest number.</description>
    <formula>CEILING(TransactionAmount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Amount Rounded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>