force-app/main/default/objects/TransactionJournal/fields/Voucher_Count__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Count__c</fullName>
    <label>Voucher Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>