force-app/main/default/objects/TransactionJournal/fields/Voucher_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Definition_Name__c</fullName>
    <description>to be used in journals processing for bulk assigning vouchers to members</description>
    <label>Voucher Definition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>